[tool.poetry]
name = "blocking_resource"
version = "0.1.0"
description = ""
authors = ["Santiago Medina <devsanmedina@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Flask = "^2.1.2"
gunicorn = "^20.1.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
